# iot-tinyml-lab

./: .gitignore  CMakeLists.txt  README.md  iris_dataset.h  main.c  main_train.c  main_train_RGB.c  main_train_iris.c  rgb_dataset.h
AIfES_for_Arduino-main/etc/python/aifes_tools/: setup.py
AIfES_for_Arduino-main/etc/python/aifes_tools/aifes/tools/: __init__.py  model_conversion.py
AIfES_for_Arduino-main/examples/0_Universal/4_TicTacToe_F32/: neural_network.ino
AIfES_for_Arduino-main/src/: aifes.h
AIfES_for_Arduino-main/src/core/: aifes_core.h  aifes_math.h
Arduino/: arduino_iris_deploy.ino  iris_deploy.ino  model_deploy.ino  rgb_deploy.ino  rgb_grab.ino
